--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <camel.version>2.13.0</camel.version>
         <cdi.version>1.2</cdi.version>
+        <slf4j.version>1.7.7</slf4j.version>
         <weld.version>2.2.4.Final</weld.version>
         <owb.version>2.0.0-SNAPSHOT</owb.version>
         <arquillian.version>1.1.5.Final</arquillian.version>
@@ -216,23 +217,9 @@
             <!-- test dependencies -->
 
             <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>1.1.2</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jul-to-slf4j</artifactId>
-                <version>1.7.7</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -240,13 +227,6 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>1.9.5</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-library</artifactId>
-                <version>1.3</version>
                 <scope>test</scope>
             </dependency>
 
@@ -275,17 +255,6 @@
                 <type>pom</type>
             </dependency>
 
-            <!-- TODO: should be removed when the depchain is included in the BOM
-            see https://github.com/shrinkwrap/descriptors/pull/94
-            and https://issues.jboss.org/browse/SHRINKDESC-154 -->
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.descriptors</groupId>
-                <artifactId>shrinkwrap-descriptors-depchain</artifactId>
-                <version>${shrinkwrap.descriptors.version}</version>
-                <scope>test</scope>
-                <type>pom</type>
-            </dependency>
-
             <!-- Arquillian -->
 
             <dependency>
@@ -304,20 +273,6 @@
                 <version>${weld.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.arquillian.container</groupId>
-                <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
-                <version>${arquillian.weld.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.arquillian.container</groupId>
-                <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
-                <version>${arquillian.weld.version}</version>
-                <scope>test</scope>
             </dependency>
 
             <!-- OpenWebBeans -->
@@ -356,6 +311,66 @@
             <artifactId>cdi-api</artifactId>
             <version>${cdi.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- test dependencies -->
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- TODO: should be removed when the depchain is included in the BOM
+        see https://github.com/shrinkwrap/descriptors/pull/94
+        and https://issues.jboss.org/browse/SHRINKDESC-154 -->
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
+            <artifactId>shrinkwrap-descriptors-depchain</artifactId>
+            <version>${shrinkwrap.descriptors.version}</version>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.container</groupId>
+            <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+            <version>${arquillian.weld.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-core-impl</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
