Camel context advise test

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+
             <dependencies>
 
                 <!-- provided dependencies -->
@@ -104,20 +105,11 @@
 
         <profile>
             <id>owb</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- JUL configuration for OWB -->
-                            <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties</argLine>
-                            <!-- JaCoCo agent if activated -->
-                            <argLine>${jacoco.agent.arg}</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+
+            <properties>
+                <!-- JUL configuration for OWB -->
+                <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties</argLine>
+            </properties>
 
             <dependencies>
 
@@ -191,7 +183,6 @@
                                     <goal>prepare-agent</goal>
                                 </goals>
                                 <configuration>
-                                    <propertyName>jacoco.agent.arg</propertyName>
                                     <destFile>${project.build.directory}/jacoco.exec</destFile>
                                     <append>true</append>
                                     <includes>
@@ -200,14 +191,6 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>${jacoco.agent.arg}</argLine>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
