Support Java EE environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 
 script:
   - mvn test -Pjacoco -Pweld
-  - mvn test -Pjacoco -Powb -pl envs/se
+#  - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
 jdk:
