--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ install:
 
 script:
   - mvn test -Pjacoco -Pweld
-  - mvn test -Pjacoco -Powb -pl envs/se
+# disabled until https://issues.apache.org/jira/browse/OWB-977 is properly implemented
+# - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
 jdk:
